--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>First PWA Demo App</title>
 
     <link rel="manifest" href="manifest.json">
-    <link rel="stylesheet" href="/index.css">
-    <link rel="stylesheet" href="/common.css">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="common.css">
 
     <link rel="apple-touch-startup-image" href="/splash.png">
 </head>
