--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
     </div>
 
     <div class="socialLinks">
-        <a href="https://www.instagram.com/choptsalad/"><img src="/instagram.svg" alt="Instagram"
+        <a href="https://www.instagram.com/choptsalad/"><img src="instagram.svg" alt="Instagram"
                 class="socialLink"></a>
-        <a href="https://www.facebook.com/choptsalad/"><img src="/fb.svg" alt="Facebook" class="socialLink"></a>
-        <a href="https://x.com/Chopt"><img src="/twitter.svg" alt="Twitter" class="socialLink"></a>
+        <a href="https://www.facebook.com/choptsalad/"><img src="fb.svg" alt="Facebook" class="socialLink"></a>
+        <a href="https://x.com/Chopt"><img src="twitter.svg" alt="Twitter" class="socialLink"></a>
     </div>
 
     <div class="horizontal footerView">
