--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>First PWA Demo App</title>
 
     <link rel="manifest" href="manifest.json">
-    <link rel="stylesheet" href="../CSS/index.css">
-    <link rel="stylesheet" href="../CSS/common.css">
+    <link rel="stylesheet" href="CSS/index.css">
+    <link rel="stylesheet" href="CSS/common.css">
 
     <link rel="apple-touch-startup-image" href="../Assets/splash.png">
 </head>
@@ -41,11 +41,10 @@
     </div>
 
     <div class="socialLinks">
-        <a href="https://www.instagram.com/choptsalad/"><img src="../Assets/instagram.svg" alt="Instagram"
+        <a href="https://www.instagram.com/choptsalad/"><img src="Assets/instagram.svg" alt="Instagram"
                 class="socialLink"></a>
-        <a href="https://www.facebook.com/choptsalad/"><img src="../Assets/fb.svg" alt="Facebook"
-                class="socialLink"></a>
-        <a href="https://x.com/Chopt"><img src="../Assets/twitter.svg" alt="Twitter" class="socialLink"></a>
+        <a href="https://www.facebook.com/choptsalad/"><img src="Assets/fb.svg" alt="Facebook" class="socialLink"></a>
+        <a href="https://x.com/Chopt"><img src="Assets/twitter.svg" alt="Twitter" class="socialLink"></a>
     </div>
 
     <div class="horizontal footerView">
