--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="CSS/index.css">
     <link rel="stylesheet" href="CSS/common.css">
 
-    <link rel="apple-touch-startup-image" href="../Assets/splash.png">
+    <link rel="apple-touch-startup-image" href="Assets/splash.png">
 </head>
 
 <body>
